log
Thu 24 Aug 2023 12:16:38 AM UTC: 
 tests:  0|6
total_score: 0/70
9359820
Thu 24 Aug 2023 06:37:17 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e2aa153
Thu 24 Aug 2023 06:38:43 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:10: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   41 |   if(list->prev !=NULL){
      |          ^~
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
38d1ff7
Thu 24 Aug 2023 06:39:02 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:12: error: ‘List’ {aka ‘struct List’} has no member named ‘heat’; did you mean ‘head’?
   41 |   if(list->heat !=NULL){
      |            ^~~~
      |            head
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1cbc9fb
